--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
         </div> -->
 
         <!-- my map ****************** -->
-        <div id="googleMap" style="width:100%;height:270px;"></div>
+       <!--  <div id="googleMap" style="width:100%;height:270px;"></div>
 
         <script>
           function myMap() {
@@ -90,7 +90,7 @@
         }
         </script>
 
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIwzALxUPNbatRBj3Xi1Uhp0fFzwWNBkE&callback=myMap"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIwzALxUPNbatRBj3Xi1Uhp0fFzwWNBkE&callback=myMap"></script> -->
       <!-- *****************************  -->
 
         <div class="row mt-5">
