--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
-      <h2>Malamati K</h2>
+      <h2 style="font-size: 40px">Malamati K</h2>
       <h2>I'm developer!</h2>
       <a href="about.html" class="btn-about">About Me</a>
     </div>
