--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
         <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
         <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
+        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
 
     </div>
@@ -85,7 +85,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> <a href="https://www.mathlifefun.gr" target="_blank"> www.mathlifefun.gr</li></a>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> <a href="https://www.mathlifefun.gr" target="_blank"> www.mathlifefun.gr</a></li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> kotoula.malamati@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Thessaloniki, Greece</li>
                 </ul>
